# rfbooking-fastapi-oss

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  rfbctl.bat  rfbctl.sh  supervisord.conf
app/: __init__.py  config.py  database.py  main.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  auth.py  booking.py  equipment.py  user.py
app/routes/: __init__.py  admin.py  ai_assistant.py  auth.py  bookings.py  equipment.py  manager.py  pages.py  reports.py  setup.py
app/services/: __init__.py  ai_service.py  email.py  notifications.py  scheduler.py
app/utils/: __init__.py  helpers.py
config/: config.example.yaml
docs/: DEPLOYMENT.md  IMPROVEMENT_PLAN.md  SETUP_IMPLEMENTATION_PLAN.md  info.md
scripts/: entrypoint.sh  init_db.py
static/css/: styles.css
static/js/: dashboard.js
templates/: auth_redirect.html  base.html  dashboard.html  index.html  login.html  setup.html
